# pgsqlite

./: .gitignore  Cargo.toml  PLAN.md  PLAN2.md  README.md
sdk/node/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/node/__tests__/: integration.test.ts  pgsqlite.test.ts  testing.test.ts
sdk/node/examples/: basic-pg.ts  drizzle-example.ts  prisma-example.ts
sdk/node/src/: binary.ts  errors.ts  index.ts  pgsqlite.ts  testing.ts  types.ts
src/: lib.rs  main.rs  server.rs
src/backend/: sqlite.rs
src/catalog/: mod.rs
src/protocol/: messages.rs
src/sql/: translator.rs
tests/: integration.rs
